--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
           {% endif %}
 
           {% if site.social.jianshu %}
-          <!-- Zhihu -->
+          <!-- jianshu -->
           <li class="navigation__item_social">
             <a href="https://www.jianshu.com/u/{{site.social.jianshu}}" title="@{{site.social.jianshu}}" target="_blank">
               <div class="footer-social-icon" style="background:url(/images/jianshu.png);"></div>
@@ -87,16 +87,15 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://leopardpan.cn/">leopardpan</a> |
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://gitciris.github.io/">GitCiris</a> |
             <iframe
                 style="margin-left: 2px; margin-bottom:-5px;"
                 frameborder="0" scrolling="0" width="91px" height="20px"
-                src="https://ghbtns.com/github-btn.html?user=leopardpan&repo=leopardpan.github.io&type=star&count=true" >
+                src="https://ghbtns.com/github-btn.html?user=GitCiris&repo=gitciris.github.io&type=star&count=true" >
             </iframe>
             </p>
         	<div align="right">
     			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
           <!-- 访问统计 -->
           <span id="busuanzi_container_site_pv">
             本站总访问量
