--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,18 +3,6 @@
         <div class = "footer_div">  
         <nav class="cover-navigation navigation--social">
           <ul class="navigation">
-
-            {% if site.social.qq %}
-          <!-- Github -->
-          <li class="navigation__item_social">
-            <a href="https://im.qq.com/{{site.social.qq}}" title="@{{site.social.qq}} 的 QQ" target="_blank">
-              <div class="footer-social-icon" style="background:url(/images/qq.png);"></div>
-            </a>
-          </li>
-          {% endif %}
-
-          
-
           {% if site.social.github %}
           <!-- Github -->
           <li class="navigation__item_social">
@@ -27,13 +15,12 @@
           {% if site.social.zhihu %}
           <!-- Zhihu -->
           <li class="navigation__item_social">
-            <a href="https://im.qq.com/index/{{site.social.qq}}" title="@{{site.social.qq}}" target="_blank">
-              <div class="footer-social-icon" style="background:url(/images/qq.png);"></div>
+            <a href="https://www.zhihu.com/{{site.social.Zhihu}}" title="@{{site.social.zhihu}}" target="_blank">
+              <div class="footer-social-icon" style="background:url(/images/zhihu.png);"></div>
             </a>
           </li>
 
           {% endif %}
-
           {% if site.social.juejin %}
           <!-- Zhihu -->
           <li class="navigation__item_social">
@@ -41,19 +28,16 @@
               <div class="footer-social-icon" style="background:url(/images/juejin.png);"></div>
             </a>
           </li>
-
-          {% endif %}
-
           {% if site.social.jianshu %}
           <!-- jianshu -->
           <li class="navigation__item_social">
-            <a href="https://www.jianshu.com/u/{{site.social.jianshu}}" title="@{{site.social.jianshu}}" target="_blank">
+            <a href="https://www.jianshu.com/{{site.social.jianshu}}" title="@{{site.social.jianshu}}" target="_blank">
               <div class="footer-social-icon" style="background:url(/images/jianshu.png);"></div>
             </a>
           </li>
 
           {% endif %}
-
+          {% endif %}
           {% if site.social.weibo %}
           <!-- Weibo -->
           <li class="navigation__item_social">
@@ -62,16 +46,15 @@
             </a>
           </li>
           {% endif %}
-
           
-          {% if site.social.twitter %}
-          <!-- Twitter -->
+          <!-- {% if site.social.twitter %}
+           
           <li class="navigation__item_social">
             <a href="http://twitter.com/{{site.social.twitter}}" title="@{{site.social.twitter}}" target="_blank">
               <div class="footer-social-icon" style="background:url(/images/twitter.png);"></div>
             </a>
           </li>
-          {% endif %}
+          {% endif %} -->
 
 
           {% if site.social.mail %}
@@ -83,13 +66,7 @@
           </li>
           {% endif %}
           
-          <!-- RSS -->
-          <li class="navigation__item_social">
-            <a href="/feed.xml" rel="author" title="RSS" target="_blank">
-              <div class="footer-social-icon" style="background:url(/images/rss.png);"></div>
-              <span class="label">RSS</span>
-            </a>
-          </li>
+          
 
           </ul>
         </nav>
