--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
           {% if site.social.jianshu %}
           <!-- jianshu -->
           <li class="navigation__item_social">
-            <a href="https://www.jianshu.com/{{site.social.jianshu}}" title="@{{site.social.jianshu}}" target="_blank">
+            <a href="https://www.jianshu.com/u/{{site.social.jianshu}}" title="@{{site.social.jianshu}}" target="_blank">
               <div class="footer-social-icon" style="background:url(/images/jianshu.png);"></div>
             </a>
           </li>
