--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,6 @@
 <section class="post-comments">
 
-  {% if site.comment.livere %}
+  <!-- {% if site.comment.livere %}
 
       <div id="lv-container" data-id="city" data-uid="{{site.comment.livere}}">
       <script type="text/javascript">
@@ -15,7 +15,7 @@
          })(document, 'script');
       </script>
       <noscript>为正常使用来必力评论功能请激活JavaScript</noscript>
-      </div>
+      </div> -->
 
   {% elsif site.comment.disqus %}
     <div id="disqus_thread"></div>
