--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,14 +11,14 @@
             </a>
           </li>
           {% endif %}
-          {% if site.social.bilibili %}
+          {%  if site.social.github %}
           <!-- bilibili -->
           <li class="navigation__item_social">
             <a href="https://www.bilibili.com/{{site.social.bilibili}}" title="@{{site.social.bilibili}}" target="_blank">
               <div class="footer-social-icon" style="background:url(/images/bilibili.png);"></div>
             </a>
           </li>
-          {% if site.social.zhihu %}
+         {% if site.social.zhihu %}
           <!-- Zhihu -->
           <li class="navigation__item_social">
             <a href="https://www.zhihu.com/{{site.social.Zhihu}}" title="@{{site.social.zhihu}}" target="_blank">
