--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             </a>
           </li>
           {% endif %}
-          {%  if site.social.github %}
+          {%  if site.social.bilibili %}
           <!-- bilibili -->
           <li class="navigation__item_social">
             <a href="https://www.bilibili.com/{{site.social.bilibili}}" title="@{{site.social.bilibili}}" target="_blank">
