--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,8 @@
           {% if site.social.zhihu %}
           <!-- Zhihu -->
           <li class="navigation__item_social">
-            <a href="https://www.zhihu.com/{{site.social.Zhihu}}" title="@{{site.social.zhihu}}" target="_blank">
-              <div class="footer-social-icon" style="background:url(/images/zhihu.png);"></div>
+            <a href="https://www.bilibili.com/{{site.social.Zhihu}}" title="@{{site.social.zhihu}}" target="_blank">
+              <div class="footer-social-icon" style="background:url(/images/bilibili.png);"></div>
             </a>
           </li>
 
