--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
               <div class="footer-social-icon" style="background:url(/images/bilibili.png);"></div>
             </a>
           </li>
+          {% endif %}
          {% if site.social.zhihu %}
           <!-- Zhihu -->
           <li class="navigation__item_social">
